fix navigation by id issue
After clicking a navigation link and navigating to the page section by id, the fixed navigation bar would partially cover the section, hiding the heading, which is the most important indicator that the user has gotten to the correct spot. Adding padding to the top of the containers and removing whitespace elsewhere fixed this.

--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ body{
   box-sizing: border-box;
 }
 .container{
-  padding: 30px 15px;
+  padding: 100px 15px 0 15px;
   box-sizing: border-box;
-  margin: 100px auto;
+  margin: 0 auto;
 }
 header{
   background-color: #011936;
